# C-Cloth-Simulation-Vellum-

./: .gitignore  CMakeLists.txt  CMakeLists_minimal.txt  CMakeLists_test.txt  Documentation.txt  PROJECT_SUMMARY.md  README.md  build.bat  build.sh  fix_glew.ps1  setup_libraries.ps1
src/: cloth.cpp  cloth.h  main.cpp  math_types.hpp  minimal_test.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  simple_test.cpp  window_gl.cpp  window_gl.h
test_opengl/: CMakeLists.txt  minimal_test.cpp
